# git-open

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd.yml  choco.yml
choco/: git-open.nuspec  publish.txt
choco/tools/: VERIFICATION.txt
src/: main.rs
src/back/: command.rs  git.rs  mod.rs  utils.rs
